# ChangeLog for dev-python/httpretty
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> httpretty-0.4.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> httpretty-0.4.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> httpretty-0.4.ebuild:
  Keyworded x86.

  30 Jul 2011; James Rowe <jnrowe@gmail.com> -httpretty-0.3.ebuild,
  httpretty-0.4.ebuild:
  Keyworded amd64.

  29 Jul 2011; James Rowe <jnrowe@gmail.com> httpretty-0.3.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com> httpretty-0.4.ebuild:
  Keyworded ~x86.

*httpretty-0.4 (30 Jun 2011)

  30 Jun 2011; James Rowe <jnrowe@gmail.com> +httpretty-0.4.ebuild:
  Version bump [413].

*httpretty-0.3 (29 Jun 2011)

  29 Jun 2011; James Rowe <jnrowe@gmail.com> +httpretty-0.3.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [410].
