@@ -3,11 +3,9 @@
 # $Header: $
 
 EAPI=4
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2:2.6"
 # 2.5 isn't supported because of socket.create_connection
 # 3.x isn't supported because of Unicode literal syntax
-RESTRICT_PYTHON_ABIS="2.5 3.*"
+PYTHON_COMPAT="python2_6 python2_7"
 
 inherit jnrowe-pypi
 
@@ -21,8 +19,16 @@ IUSE=""
 DEPEND=""
 RDEPEND=""
 
+DOCS=(README.md)
+
 src_unpack() {
 	# Broken tarball, with no toplevel directory among other things
 	mkdir "${S}"; cd "${S}"
 	unpack ${A}
+}
+
+src_install() {
+	default
+
+	python-distutils-ng_src_install
 }
